
[TestGeneratePostprovisionConfig - 1]
helm:
    values:
        chainlink:
            nodes:
                0-ks-wf-bt-node1:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []
                1-ks-wf-node2:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        DefaultBootstrappers = ['12D3KooWFuJXoLEQrNxCUvkorfeJ21QDB7KDpzUqMhaXz81myztq@0-ks-wf-bt-node1:6691']
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []

                        [EVM.Workflow]
                        FromAddress = '0x3EBb0963af707384d37c848B02D8151EB914a92d'
                        ForwarderAddress = '0x0200000000000000000000000000000000000000'
                2-ks-wf-node3:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        DefaultBootstrappers = ['12D3KooWFuJXoLEQrNxCUvkorfeJ21QDB7KDpzUqMhaXz81myztq@0-ks-wf-bt-node1:6691']
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []

                        [EVM.Workflow]
                        FromAddress = '0x2d40cD3f33a0aF56BD00a1a99fe1145f1dFBE5f9'
                        ForwarderAddress = '0x0200000000000000000000000000000000000000'
                3-ks-str-trig-bt-node1:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []
                3-ks-wf-node4:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        DefaultBootstrappers = ['12D3KooWFuJXoLEQrNxCUvkorfeJ21QDB7KDpzUqMhaXz81myztq@0-ks-wf-bt-node1:6691']
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []

                        [EVM.Workflow]
                        FromAddress = '0xeCbCF40dC6D0FDD2aE33FfD0e8D5aA76dFe41759'
                        ForwarderAddress = '0x0200000000000000000000000000000000000000'
                4-ks-str-trig-node2:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        DefaultBootstrappers = ['12D3KooWFuJXoLEQrNxCUvkorfeJ21QDB7KDpzUqMhaXz81myztq@0-ks-wf-bt-node1:6691']
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []
                5-ks-str-trig-node3:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        DefaultBootstrappers = ['12D3KooWFuJXoLEQrNxCUvkorfeJ21QDB7KDpzUqMhaXz81myztq@0-ks-wf-bt-node1:6691']
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []
                6-ks-str-trig-node4:
                    image: ${runtime.images.app}
                    overridesToml: |
                        [Capabilities]
                        [Capabilities.Peering]
                        [Capabilities.Peering.V2]
                        Enabled = true
                        DefaultBootstrappers = ['12D3KooWFuJXoLEQrNxCUvkorfeJ21QDB7KDpzUqMhaXz81myztq@0-ks-wf-bt-node1:6691']
                        ListenAddresses = ['0.0.0.0:6691']

                        [Capabilities.ExternalRegistry]
                        Address = '0x0300000000000000000000000000000000000000'
                        NetworkID = 'evm'
                        ChainID = '1337'

                        [[EVM]]
                        ChainID = '1337'
                        Nodes = []
        ingress:
            hosts:
                - host: ${DEVSPACE_NAMESPACE}-0-ks-wf-bt-node1.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-0-ks-wf-bt-node1
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-1-ks-wf-node2.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-1-ks-wf-node2
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-2-ks-wf-node3.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-2-ks-wf-node3
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-3-ks-wf-node4.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-3-ks-wf-node4
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-3-ks-str-trig-bt-node1.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-3-ks-str-trig-bt-node1
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-4-ks-str-trig-node2.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-4-ks-str-trig-node2
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-5-ks-str-trig-node3.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-5-ks-str-trig-node3
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-6-ks-str-trig-node4.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-6-ks-str-trig-node4
                                port:
                                    number: 6688

---

[TestGeneratePreprovisionConfig - 1]
helm:
    values:
        chainlink:
            nodes:
                0-ks-wf-bt-node1:
                    image: ${runtime.images.app}
                1-ks-wf-node2:
                    image: ${runtime.images.app}
                2-ks-wf-node3:
                    image: ${runtime.images.app}
                3-ks-str-trig-bt-node1:
                    image: ${runtime.images.app}
                3-ks-wf-node4:
                    image: ${runtime.images.app}
                4-ks-str-trig-node2:
                    image: ${runtime.images.app}
                5-ks-str-trig-node3:
                    image: ${runtime.images.app}
                6-ks-str-trig-node4:
                    image: ${runtime.images.app}
        ingress:
            hosts:
                - host: ${DEVSPACE_NAMESPACE}-0-ks-wf-bt-node1.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-0-ks-wf-bt-node1
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-1-ks-wf-node2.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-1-ks-wf-node2
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-2-ks-wf-node3.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-2-ks-wf-node3
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-3-ks-wf-node4.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-3-ks-wf-node4
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-3-ks-str-trig-bt-node1.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-3-ks-str-trig-bt-node1
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-4-ks-str-trig-node2.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-4-ks-str-trig-node2
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-5-ks-str-trig-node3.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-5-ks-str-trig-node3
                                port:
                                    number: 6688
                - host: ${DEVSPACE_NAMESPACE}-6-ks-str-trig-node4.${DEVSPACE_INGRESS_BASE_DOMAIN}
                  http:
                    paths:
                        - path: /
                          backend:
                            service:
                                name: app-6-ks-str-trig-node4
                                port:
                                    number: 6688

---
